# ShizukuOpenWeather

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.en.md  README.md  README.zh-CN.md  README_LICENSE_NOTE.md  build.gradle.kts  docker-compose.override.example.yml  docker-compose.yml  gradle.properties  settings.gradle.kts
.devcontainer/: devcontainer.json
.github/workflows/: android.yml  desktop-release.yml  devcontainer-ci-cd.yml  publish-android-release.yml  publish-desktop-release.yml
apps/android/: build.gradle.kts  proguard-rules.pro
apps/android/src/main/: AndroidManifest.xml
apps/api/: build.gradle.kts
apps/desktop-dotnet/: Form1.Designer.cs  Form1.cs  LocalWeatherCache.cs  LocalWeatherHost.cs  Program.cs  ShizukuWeatherDesktop.csproj
apps/desktop-dotnet/installer/: ShizukuOpenWeather.iss
apps/web/: index.html  package-lock.json  package.json  tsconfig.json
apps/web/src/: App.vue  main.ts
apps/web/src/api/: client.ts
apps/web/src/styles/: app.css  (+2 more)
crates/weather-cli/: Cargo.toml
crates/weather-cli/src/: main.rs
crates/weather-core/: Cargo.toml
crates/weather-core/src/: lib.rs  models.rs
docs/: NEXT_STEPS.md  PROJECT_PLAN.md  STRUCTURE.md
docs/api/: rest.md
docs/architecture/: overview.md  platforms.md
docs/cli/: cli-design.md
docs/data/: sqlite.md
docs/licenses/: README.md
docs/ui/: android-design.md  desktop-design.md
scripts/: build-all.ps1  build-all.sh  build-desktop-installer.ps1  check-dev-env.ps1  common.ps1  dev-api.ps1  dev-api.sh  dev-web.ps1  dev-web.sh  start-dev.ps1  start-dev.sh
(+41 files in other folders)
